feat: add os-env package for managing path, env, rc files

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "admina": "^1.0.1",
     "caxa": "^3.0.1",
     "ci-info": "^4.0.0",
+    "os-env": "workspace:*",
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
@@ -128,6 +129,7 @@
     "admina",
     "ci-info",
     "ci-log",
+    "os-env",
     "escape-path-with-spaces",
     "escape-quotes",
     "escape-string-regexp",
