fix: use default pnpm configuration

--- a/package.json
+++ b/package.json
@@ -57,15 +57,18 @@
   "devDependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
+    "@actions/http-client": "^2.2.1",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@babel/cli": "^7.24.8",
     "@babel/plugin-transform-private-methods": "^7.24.7",
     "@biomejs/biome": "^1.8.3",
+    "@iarna/toml": "^2.2.5",
     "@shockpkg/archive-files": "github:aminya/archive-files#54ec59fad46aca736ac6feb6c7bb526528141b9d",
     "@swc/jest": "^0.2.36",
     "@types/cross-spawn": "^6.0.6",
     "@types/eslint": "^8.56.11",
+    "@types/iarna__toml": "~2.0.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^12.20.55",
     "@types/semver": "^7.5.8",
