--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "preserveSymlinks": true,
     "removeComments": false,
     "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     // target Node.js 12 https://node.green/#ES2019
     "lib": ["ES2019"],
     "target": "ESNext",
