--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,51 +1,54 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
-    "files": {
-        "ignore": [
-            "**/node_modules/**",
-            "**/.pnpm-store/**",
-            "**/dist/**",
-            "dev/cpp_vcpkg_project/**/*",
-            "**/.venv/",
-            "**/.*cache/",
-            "**/coverage/"
-        ],
-        "ignoreUnknown": true
-    },
-    "organizeImports": {
-        "enabled": true
-    },
-    "linter": {
-        "enabled": true,
-        "rules": {
-            "recommended": true,
-            "style": {
-                "noInferrableTypes": "off",
-                "noUselessElse": "off",
-                "noNonNullAssertion": "off",
-                "useNodejsImportProtocol": "off"
-            },
-            "complexity": {
-                "useLiteralKeys": "off"
-            },
-            "suspicious": {
-                "noConfusingVoidType": "off"
-            }
-        }
-    },
-    "formatter": {
-        "enabled": false,
-        "indentWidth": 4,
-        "indentStyle": "space"
-    },
-    "json": {
-        "formatter": {
-            "enabled": false,
-            "trailingCommas": "none"
-        },
-        "parser": {
-            "allowComments": true,
-            "allowTrailingCommas": true
-        }
+  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "files": {
+    "ignore": [
+      "**/node_modules/**",
+      "**/.pnpm-store/**",
+      "**/dist/**",
+      "dev/cpp_vcpkg_project/**/*",
+      "**/.venv/",
+      "**/.*cache/",
+      "**/coverage/"
+    ],
+    "ignoreUnknown": true
+  },
+  "organizeImports": {
+    "enabled": true
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "style": {
+        "noInferrableTypes": "off",
+        "noUselessElse": "off",
+        "noNonNullAssertion": "off",
+        "useNodejsImportProtocol": "off"
+      },
+      "complexity": {
+        "useLiteralKeys": "off"
+      },
+      "suspicious": {
+        "noConfusingVoidType": "off"
+      },
+      "nursery": {
+        "useImportExtensions": "warn"
+      }
     }
+  },
+  "formatter": {
+    "enabled": false,
+    "indentWidth": 4,
+    "indentStyle": "space"
+  },
+  "json": {
+    "formatter": {
+      "enabled": false,
+      "trailingCommas": "none"
+    },
+    "parser": {
+      "allowComments": true,
+      "allowTrailingCommas": true
+    }
+  }
 }
