--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
-    "build.packages": "pnpm run -r build",
-    "build.parcel": "cross-env NODE_ENV=production parcel build && run-s build.babel && shx cp -r ./dist/actions/* ./dist/modern",
-    "build.babel": "babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --plugins @babel/plugin-transform-private-methods --compact --no-babelrc --source-maps true",
+    "build": "turbo build && pnpm run build.root",
+    "build.root": "run-p lint.tsc build.root.parcel copy.matchers && run-s build.root.babel build.root.modern",
+    "build.root.parcel": "cross-env NODE_ENV=production parcel build",
+    "build.root.babel": "babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --plugins @babel/plugin-transform-private-methods --compact --no-babelrc --source-maps true",
+    "build.root.modern": "shx cp -r ./dist/actions/* ./dist/modern",
     "bump": "ncu -u -x numerous,execa,prettier,@types/node,eslint,@types/eslint && pnpm update && pnpx typesync && pnpm run clean",
     "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions",
@@ -117,6 +118,7 @@
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
+    "turbo": "2.0.5",
     "typescript": "^5.5.4",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
@@ -160,6 +162,10 @@
     "node": ">=12.x",
     "pnpm": "^9"
   },
+  "packageManager": "pnpm@9.6.0",
+  "workspaces": [
+    "packages/*"
+  ],
   "keywords": [
     "github-actions",
     "actions",
