--- a/packages/ci-log/package.json
+++ b/packages/ci-log/package.json
@@ -8,7 +8,8 @@
   "main": "./dist/index.js",
   "source": "./src/index.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --pretty",
+    "lint": "tsc --noEmit --pretty"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
