--- a/packages/untildify-user/package.json
+++ b/packages/untildify-user/package.json
@@ -8,7 +8,8 @@
   "main": "./dist/index.js",
   "source": "./src/index.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --pretty",
+    "lint": "tsc --noEmit --pretty"
   },
   "dependencies": {
     "admina": "1.0.1"
