chore: add linting checks via turbo

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "scripts": {
     "build": "turbo build && pnpm run build.root",
-    "build.root": "run-p lint.tsc build.root.parcel copy.matchers && run-s build.root.babel build.root.modern",
+    "build.root": "run-p lint.root.tsc build.root.parcel copy.matchers && run-s build.root.babel build.root.modern",
     "build.root.parcel": "cross-env NODE_ENV=production parcel build",
     "build.root.babel": "babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --plugins @babel/plugin-transform-private-methods --compact --no-babelrc --source-maps true",
     "build.root.modern": "shx cp -r ./dist/actions/* ./dist/modern",
@@ -40,16 +40,17 @@
     "dev": "cross-env NODE_ENV=development parcel watch",
     "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.dprint",
-    "lint": "run-p --aggregate-output --continue-on-error lint.cspell lint.eslint lint.dprint lint.tsc lint.biome",
+    "lint": "turbo lint && pnpm run lint.root",
+    "lint.root": "run-p --aggregate-output --continue-on-error lint.cspell lint.root.eslint lint.dprint lint.root.tsc lint.biome",
     "lint.cspell": "cspell lint --no-progress --show-suggestions --cache --cache-location ./.cache/cspell/.cspellcache",
-    "lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
+    "lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "lint.biome": "biome check --write --unsafe",
     "lint.dprint": "dprint fmt",
-    "lint.tsc": "tsc --noEmit --pretty",
+    "lint.root.tsc": "tsc --noEmit --pretty",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
     "prepublishOnly": "rm ./dist/tsconfig.tsbuildinfo",
-    "test.lint": "run-p --aggregate-output --continue-on-error lint.cspell test.lint.eslint test.lint.dprint lint.tsc test.lint.biome",
-    "test.lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
+    "test.lint": "run-p --aggregate-output --continue-on-error lint.cspell test.lint.root.eslint test.lint.dprint lint.root.tsc test.lint.biome",
+    "test.lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
     "test.lint.dprint": "dprint check",
     "test": "jest --runInBand --forceExit --coverage",
@@ -88,7 +89,7 @@
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
     "eslint": "^8.57.0",
-    "eslint-config-atomic": "^1.22.0",
+    "eslint-config-atomic": "^1.22.1",
     "exec-powershell": "workspace:*",
     "execa": "^7.2.0",
     "is-url-online": "^1.5.0",
