chore: add lefthook to do a clean build before commit

--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "build": "turbo build && pnpm run build.root",
-    "build.root": "run-p lint.root.tsc build.root.parcel copy.matchers && run-s build.root.babel build.root.modern",
-    "build.root.parcel": "cross-env NODE_ENV=production parcel build",
-    "build.root.babel": "babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --plugins @babel/plugin-transform-private-methods --compact --no-babelrc --source-maps true",
-    "build.root.modern": "shx cp -r ./dist/actions/* ./dist/modern",
+    "build": "turbo build && run-p lint.root.tsc build.parcel copy.matchers && run-s build.babel build.modern",
+    "build.parcel": "cross-env NODE_ENV=production parcel build",
+    "build.babel": "babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --plugins @babel/plugin-transform-private-methods --compact --no-babelrc --source-maps true",
+    "build.modern": "shx cp -r ./dist/actions/* ./dist/modern",
     "bump": "ncu -u -x numerous,execa,prettier,@types/node,eslint,@types/eslint && pnpm update && pnpx typesync && pnpm run clean",
     "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions",
@@ -40,16 +39,15 @@
     "dev": "cross-env NODE_ENV=development parcel watch",
     "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.dprint",
-    "lint": "turbo lint && pnpm run lint.root",
-    "lint.root": "run-p --aggregate-output --continue-on-error lint.cspell lint.root.eslint lint.dprint lint.root.tsc lint.biome",
+    "lint": "turbo lint && run-p --aggregate-output --continue-on-error lint.**",
     "lint.cspell": "cspell lint --no-progress --show-suggestions --cache --cache-location ./.cache/cspell/.cspellcache",
-    "lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "lint.biome": "biome check --write --unsafe",
     "lint.dprint": "dprint fmt",
     "lint.root.tsc": "tsc --noEmit --pretty",
+    "lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
     "prepublishOnly": "rm ./dist/tsconfig.tsbuildinfo",
-    "test.lint": "run-p --aggregate-output --continue-on-error lint.cspell test.lint.root.eslint test.lint.dprint lint.root.tsc test.lint.biome",
+    "test.lint": "run-p --aggregate-output --continue-on-error test.lint.** lint.cspell lint.root.tsc",
     "test.lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
     "test.lint.dprint": "dprint check",
@@ -94,6 +92,7 @@
     "execa": "^7.2.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
+    "lefthook": "^1.7.12",
     "macos-release": "^3.3.0",
     "micro-memoize": "^4.1.2",
     "mkdirp": "^3.0.1",
