feat: add setup-apt package for all the apt utils

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build.babel": "babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --plugins @babel/plugin-transform-private-methods --compact --no-babelrc --source-maps true",
     "build.modern": "shx cp -r ./dist/actions/* ./dist/modern",
     "bump": "ncu -u -x numerous,execa,prettier,@types/node,eslint,@types/eslint && pnpm update && pnpx typesync && pnpm run clean",
-    "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
+    "clean": "shx rm -rf ./dist ./exe ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
     "copy.matchers.actions": "shx cp ./src/gcc/gcc_matcher.json ./dist/actions/ && shx cp ./src/msvc/msvc_matcher.json ./dist/actions/ && shx cp ./src/python/python_matcher.json ./dist/actions/ && shx cp ./src/llvm/llvm_matcher.json ./dist/actions/",
@@ -86,6 +86,7 @@
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
+    "setup-apt": "workspace:*",
     "eslint": "^8.57.0",
     "eslint-config-atomic": "^1.22.1",
     "exec-powershell": "workspace:*",
@@ -129,12 +130,14 @@
   "productionDependencies": [
     "@actions/core",
     "@actions/exec",
+    "@actions/http-client",
     "@actions/io",
     "@actions/tool-cache",
+    "@iarna/toml",
     "admina",
     "ci-info",
     "ci-log",
-    "os-env",
+    "diagnostics_channel",
     "escape-path-with-spaces",
     "escape-quotes",
     "escape-string-regexp",
@@ -145,18 +148,19 @@
     "mri",
     "msvc-dev-cmd",
     "numerous",
+    "os-env",
     "path-exists",
     "patha",
     "retry-as-promised",
     "semver",
+    "setup-apt",
     "setup-python",
     "simple-update-notifier",
     "time-delta",
     "ubuntu-version",
     "untildify-user",
-    "web-streams-polyfill",
     "util.types",
-    "diagnostics_channel"
+    "web-streams-polyfill"
   ],
   "engines": {
     "node": ">=12.x",
