--- a/turbo.json
+++ b/turbo.json
@@ -4,16 +4,13 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**"]
+      "outputs": ["dist/"]
     },
     "lint.tsc": {
-      "dependsOn": ["build", "^lint.tsc"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"]
+      "dependsOn": ["build", "^lint.tsc"]
     },
     "lint.eslint": {
-      "dependsOn": ["build", "^lint.eslint"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"]
+      "dependsOn": ["build", "^lint.eslint"]
     },
     "lint": {
       "dependsOn": ["lint.tsc", "lint.eslint"]
