--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,7 @@
 pre-commit:
   parallel: false
   commands:
-    lint:
-      run: pnpm run lint
+    test.lint:
+      run: pnpm run test.lint
     build:
       run: pnpm run clean && pnpm i && pnpm run build -- --no-color && git add ./dist
