docs: add readme for setup-apt and os-env

--- a/packages/ci-log/package.json
+++ b/packages/ci-log/package.json
@@ -2,7 +2,8 @@
   "name": "ci-log",
   "version": "1.0.0",
   "description": "Colorful logging and print for any environment including GitHub Actions",
-  "homepage": "https://github.com/aminya/setup-cpp",
+  "repository": "https://github.com/aminya/setup-cpp",
+  "homepage": "https://github.com/aminya/setup-cpp/tree/master/packages/ci-log",
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
   "main": "./dist/index.js",
