--- a/packages/os-env/package.json
+++ b/packages/os-env/package.json
@@ -2,7 +2,8 @@
   "name": "os-env",
   "version": "1.0.0",
   "description": "Manage environment variables, PATH, and rc files",
-  "homepage": "https://github.com/aminya/setup-cpp",
+  "repository": "https://github.com/aminya/setup-cpp",
+  "homepage": "https://github.com/aminya/setup-cpp/tree/master/packages/os-env",
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
   "main": "./dist/index.js",
