--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -2,7 +2,8 @@
   "name": "setup-apt",
   "version": "1.0.0",
   "description": "Setup apt packages and repositories in Debian/Ubuntu-based distributions",
-  "homepage": "https://github.com/aminya/setup-cpp",
+  "repository": "https://github.com/aminya/setup-cpp",
+  "homepage": "https://github.com/aminya/setup-cpp/tree/master/packages/setup-apt",
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
   "main": "./dist/index.js",
