--- a/packages/untildify-user/package.json
+++ b/packages/untildify-user/package.json
@@ -2,7 +2,8 @@
   "name": "untildify-user",
   "version": "1.0.0",
   "description": "Untildify a path for the current user even if it is root",
-  "homepage": "https://github.com/aminya/setup-cpp",
+  "repository": "https://github.com/aminya/setup-cpp",
+  "homepage": "https://github.com/aminya/setup-cpp/tree/master/packages/untildify-user",
   "license": "Apache-2.0",
   "author": "Amin Yahyaabadi",
   "main": "./dist/index.js",
