chore: add prepublishOnly for packages

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "lint.root.tsc": "tsc --noEmit --pretty",
     "lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
-    "prepublishOnly": "rm ./dist/tsconfig.tsbuildinfo",
+    "publish.all": "pnpm -r publish && pnpm publish",
+    "prepublishOnly": "run-s build && shx rm ./dist/tsconfig.tsbuildinfo",
     "test.lint": "run-p --aggregate-output --continue-on-error test.lint.** lint.cspell lint.root.tsc",
     "test.lint.root.eslint": "eslint ./{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
