--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "tsc --pretty",
     "lint.tsc": "tsc --noEmit --pretty",
-    "lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix"
+    "lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@types/node": "^12",
