fix!: rename os-env to envosman due to npm conflict

--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "npm-check-updates": "^17.0.6",
     "npm-run-all2": "^6.2.2",
     "numerous": "1.0.3",
-    "os-env": "workspace:*",
+    "envosman": "workspace:*",
     "p-timeout": "^6.1.2",
     "parcel": "2.12.0",
     "path-exists": "^5.0.0",
@@ -149,7 +149,7 @@
     "mri",
     "msvc-dev-cmd",
     "numerous",
-    "os-env",
+    "envosman",
     "path-exists",
     "patha",
     "retry-as-promised",
