--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -20,7 +20,7 @@
     "ci-info": "^4.0.0",
     "path-exists": "^5.0.0",
     "ci-log": "workspace:*",
-    "os-env": "workspace:*",
+    "envosman": "workspace:*",
     "which": "4.0.0",
     "execa": "^7.2.0",
     "escape-string-regexp": "^5.0.0"
