--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -23,7 +23,8 @@
     "envosman": "workspace:*",
     "which": "4.0.0",
     "execa": "^7.2.0",
-    "escape-string-regexp": "^5.0.0"
+    "escape-string-regexp": "^5.0.0",
+    "node-downloader-helper": "2.1.9"
   },
   "engines": {
     "node": ">=12"
