feat: introduce setup-brew package

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
     "copy.matchers.actions": "shx cp ./src/gcc/gcc_matcher.json ./dist/actions/ && shx cp ./src/msvc/msvc_matcher.json ./dist/actions/ && shx cp ./src/python/python_matcher.json ./dist/actions/ && shx cp ./src/llvm/llvm_matcher.json ./dist/actions/",
-    "dev": "cross-env NODE_ENV=development parcel watch",
+    "dev.parcel": "cross-env NODE_ENV=development parcel watch",
+    "dev.packages": "turbo dev",
+    "dev": "run-p dev.packages dev.parcel",
     "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
     "format": "run-s lint.dprint",
     "lint": "turbo lint && run-p --aggregate-output --continue-on-error lint.**",
@@ -114,6 +116,7 @@
     "retry-as-promised": "^7.0.4",
     "semver": "7.6.3",
     "setup-python": "github:aminya/setup-python#a783db655c6e40317e2c0c96f9d162d9c9f4a751",
+    "setup-brew": "workspace:*",
     "shx": "0.3.4",
     "simple-update-notifier": "^2.0.0",
     "terser-config-atomic": "^1.0.0",
@@ -157,6 +160,7 @@
     "retry-as-promised",
     "semver",
     "setup-apt",
+    "setup-brew",
     "setup-python",
     "simple-update-notifier",
     "time-delta",
