--- a/packages/exec-powershell/package.json
+++ b/packages/exec-powershell/package.json
@@ -10,6 +10,7 @@
   "source": "./src/index.ts",
   "scripts": {
     "build": "tsc --pretty",
+    "dev": "tsc --watch --pretty",
     "lint.tsc": "tsc --noEmit --pretty",
     "lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "prepublishOnly": "pnpm run build"
