fix: add module type to packages + fix running the packages tests

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -8,6 +8,7 @@
       "dev/cpp_vcpkg_project/**/*",
       "**/.venv/",
       "**/.*cache/",
+      "coverage/",
       "**/coverage/"
     ],
     "ignoreUnknown": true
