--- a/packages/setup-brew/package.json
+++ b/packages/setup-brew/package.json
@@ -8,12 +8,14 @@
   "author": "Amin Yahyaabadi",
   "main": "./dist/index.js",
   "source": "./src/index.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc --pretty",
     "dev": "tsc --watch --pretty",
     "lint.tsc": "tsc --noEmit --pretty",
     "lint.eslint": "eslint **/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml} --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@types/node": "^12",
