feat!: support addAptKey options through installAptPack
BREAKING no default keys are added during apt installations anymore. Explicitly pass the keys needed.
BREAKING the arguments to addAptKeyViaServer and addAptKeyViaDownload has changed. addAptKeyViaDownload renamed to addAptKeyViaURL

--- a/packages/setup-brew/package.json
+++ b/packages/setup-brew/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "path-exists": "5.0.0",
-    "patha": "0.4.1"
+    "patha": "0.4.1",
+    "cross-spawn": "7.0.3"
   },
   "engines": {
     "node": ">=12"
