--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -26,7 +26,8 @@
     "which": "4.0.0",
     "execa": "^7.2.0",
     "escape-string-regexp": "^5.0.0",
-    "node-downloader-helper": "2.1.9"
+    "node-downloader-helper": "2.1.9",
+    "micro-memoize": "^4.1.2"
   },
   "engines": {
     "node": ">=12"
