--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/eslint": "^8.56.11",
     "@types/iarna__toml": "~2.0.5",
     "@types/jest": "^29.5.12",
+    "@types/memoizee": "^0.4.11",
     "@types/node": "^12.20.55",
     "@types/semver": "^7.5.8",
     "@types/which": "^3.0.4",
@@ -86,10 +87,10 @@
     "cspell": "^8.13.3",
     "diagnostics_channel": "^1.1.0",
     "dprint": "^0.47.2",
+    "envosman": "workspace:*",
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
-    "setup-apt": "workspace:*",
     "eslint": "^8.57.0",
     "eslint-config-atomic": "^1.22.1",
     "exec-powershell": "workspace:*",
@@ -98,14 +99,14 @@
     "jest": "^29.7.0",
     "lefthook": "^1.7.12",
     "macos-release": "^3.3.0",
-    "micro-memoize": "^4.1.2",
+    "memoizee": "^0.4.17",
     "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
+    "node-downloader-helper": "2.1.9",
     "npm-check-updates": "^17.0.6",
     "npm-run-all2": "^6.2.2",
     "numerous": "1.0.3",
-    "envosman": "workspace:*",
     "p-timeout": "^6.1.2",
     "parcel": "2.0.0-canary.1717",
     "path-exists": "^5.0.0",
@@ -115,8 +116,9 @@
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
     "semver": "7.6.3",
-    "setup-python": "github:aminya/setup-python#a783db655c6e40317e2c0c96f9d162d9c9f4a751",
+    "setup-apt": "workspace:*",
     "setup-brew": "workspace:*",
+    "setup-python": "github:aminya/setup-python#a783db655c6e40317e2c0c96f9d162d9c9f4a751",
     "shx": "0.3.4",
     "simple-update-notifier": "^2.0.0",
     "terser-config-atomic": "^1.0.0",
@@ -129,8 +131,7 @@
     "untildify-user": "workspace:*",
     "util.types": "^0.0.2",
     "web-streams-polyfill": "^4.0.0",
-    "which": "^4.0.0",
-    "node-downloader-helper": "2.1.9"
+    "which": "^4.0.0"
   },
   "productionDependencies": [
     "@actions/core",
@@ -149,7 +150,7 @@
     "exec-powershell",
     "execa",
     "is-url-online",
-    "micro-memoize",
+    "memoizee",
     "mri",
     "msvc-dev-cmd",
     "node-downloader-helper",
