--- a/packages/setup-apt/package.json
+++ b/packages/setup-apt/package.json
@@ -27,7 +27,7 @@
     "execa": "^7.2.0",
     "escape-string-regexp": "^5.0.0",
     "node-downloader-helper": "2.1.9",
-    "micro-memoize": "^4.1.2"
+    "memoizee": "^0.4.17"
   },
   "engines": {
     "node": ">=12"
@@ -49,5 +49,7 @@
     "package",
     "apt-key"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/memoizee": "0.4.11"
+  }
 }
