--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -10,6 +10,7 @@ ignorePaths:
   - dev/cpp_vcpkg_project
   - "**/node_modules/"
   - .vscode/extensions.json
+  - patches/*.patch
 words:
   - aarch
   - aminya
