--- a/package.json
+++ b/package.json
@@ -60,17 +60,17 @@
   "devDependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
-    "@actions/http-client": "^2.2.1",
+    "@actions/http-client": "^2.2.3",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
-    "@babel/cli": "^7.24.8",
-    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@babel/cli": "^7.25.6",
+    "@babel/plugin-transform-private-methods": "^7.25.4",
     "@biomejs/biome": "^1.8.3",
     "@iarna/toml": "^2.2.5",
     "@shockpkg/archive-files": "github:aminya/archive-files#54ec59fad46aca736ac6feb6c7bb526528141b9d",
     "@swc/jest": "^0.2.36",
     "@types/cross-spawn": "^6.0.6",
-    "@types/eslint": "^8.56.11",
+    "@types/eslint": "^8.56.12",
     "@types/iarna__toml": "~2.0.5",
     "@types/jest": "^29.5.12",
     "@types/memoizee": "^0.4.11",
@@ -84,7 +84,7 @@
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
-    "cspell": "^8.13.3",
+    "cspell": "^8.14.2",
     "diagnostics_channel": "^1.1.0",
     "dprint": "^0.47.2",
     "envosman": "workspace:*",
@@ -97,18 +97,18 @@
     "execa": "^7.2.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.7.0",
-    "lefthook": "^1.7.12",
+    "lefthook": "^1.7.15",
     "macos-release": "^3.3.0",
     "memoizee": "^0.4.17",
     "mkdirp": "^3.0.1",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#c01f519bd995460228ed3dec4df51df92dc290fd",
     "node-downloader-helper": "2.1.9",
-    "npm-check-updates": "^17.0.6",
+    "npm-check-updates": "^17.1.1",
     "npm-run-all2": "^6.2.2",
     "numerous": "1.0.3",
     "p-timeout": "^6.1.2",
-    "parcel": "2.0.0-canary.1717",
+    "parcel": "2.12.0",
     "path-exists": "^5.0.0",
     "patha": "^0.4.1",
     "prettier": "3.2.2",
@@ -125,7 +125,7 @@
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
     "ts-node": "^10.9.2",
     "ts-readme": "^1.1.3",
-    "turbo": "2.0.14",
+    "turbo": "2.1.1",
     "typescript": "^5.5.4",
     "ubuntu-version": "^2.0.0",
     "untildify-user": "workspace:*",
@@ -174,7 +174,7 @@
     "node": ">=12.x",
     "pnpm": "^9"
   },
-  "packageManager": "pnpm@9.8.0",
+  "packageManager": "pnpm@9.9.0",
   "workspaces": [
     "packages/*"
   ],
@@ -229,7 +229,7 @@
   },
   "pnpm": {
     "patchedDependencies": {
-      "@actions/http-client@2.2.1": "patches/@actions__http-client@2.2.1.patch"
+      "@actions/http-client@2.2.3": "patches/@actions__http-client@2.2.3.patch"
     }
   }
 }
