fix: use the default version on Ubuntu, Fedora, Arch, macOS, etc.

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -11,6 +11,7 @@ ignorePaths:
   - "**/node_modules/"
   - .vscode/extensions.json
   - patches/*.patch
+  - "**/github_brechtsanders_winlibs_mingw.json"
 words:
   - aarch
   - aminya
