--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "build.modern": "shx cp -r ./dist/actions/* ./dist/modern",
     "bump": "ncu -u -x numerous,execa,prettier,@types/node,eslint,@types/eslint && pnpm update && pnpx typesync && pnpm run clean",
     "clean": "shx rm -rf ./dist ./packages/*/dist ./exe ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
-    "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions",
-    "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
-    "copy.matchers.actions": "shx cp ./src/gcc/gcc_matcher.json ./dist/actions/ && shx cp ./src/msvc/msvc_matcher.json ./dist/actions/ && shx cp ./src/python/python_matcher.json ./dist/actions/ && shx cp ./src/llvm/llvm_matcher.json ./dist/actions/",
+    "copy.matchers": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/actions",
     "dev.parcel": "cross-env NODE_ENV=development parcel watch",
     "dev.packages": "turbo dev",
     "dev": "run-p dev.packages dev.parcel",
@@ -67,6 +65,12 @@
     "@babel/plugin-transform-private-methods": "^7.25.4",
     "@biomejs/biome": "^1.8.3",
     "@iarna/toml": "^2.2.5",
+    "@octokit/core": "^6.1.2",
+    "@octokit/openapi-types": "^22.2.0",
+    "@octokit/plugin-paginate-rest": "^11.3.3",
+    "@octokit/plugin-rest-endpoint-methods": "^13.2.4",
+    "@octokit/rest": "^21.0.2",
+    "@octokit/types": "^13.5.0",
     "@shockpkg/archive-files": "github:aminya/archive-files#54ec59fad46aca736ac6feb6c7bb526528141b9d",
     "@swc/jest": "^0.2.36",
     "@types/cross-spawn": "^6.0.6",
@@ -115,6 +119,7 @@
     "prettier-config-atomic": "^4.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
+    "safe-stable-stringify": "^2.5.0",
     "semver": "7.6.3",
     "setup-apt": "workspace:*",
     "setup-brew": "workspace:*",
