--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -214,7 +214,7 @@ jobs:
           node-version: 16
       - name: Smoke Test Node 16
         run: |
-          node ./dist/actions/setup-cpp.js --help
+          node ./dist/modern/setup-cpp.js --help
 
   Docker:
     name: Docker-${{ matrix.container.image }}
@@ -297,5 +297,4 @@ jobs:
             ./exe/setup-cpp-x64-linux
             ./exe/setup-cpp-x64-macos
             ./dist/legacy/
-            ./dist/actions/
             ./dist/modern/
